fixed all errors in the about.html

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <body>
     <header class="page-header">
       <img
-        src="img\10588211_software_developer_icon.png"
+        src="./img/10588211_software_developer_icon.png"
         class="page-header__item"
         alt=""
       />
@@ -780,11 +780,11 @@
 								h24.646c1.148,0,2.078,0.931,2.078,2.078v33.451C174.886,93.85,173.956,94.78,172.808,94.78z"
                     />
                   </defs>
-                  <clipPath
+                  <clippath
                     id="SVGID_00000093879556203950493690000000574709795776442295_"
                   >
                     <use xlink:href="#SVGID_1_" style="overflow: visible" />
-                  </clipPath>
+                  </clippath>
                   <g
                     style="
                       clip-path: url(#SVGID_00000093879556203950493690000000574709795776442295_);
@@ -1278,9 +1278,7 @@
           href="https://www.linkedin.com/in/shilpa-sudhish-614b74156/"
           target="_blank"
         >
-          <img
-            src="./img/5296501_linkedin_network_linkedin logo_icon.svg"
-            alt="LinkedIn"
+          <img src="./img/linkedin_logo_icon.svg" alt="LinkedIn"
         /></a>
       </div>
     </footer>
