fixed all errors in the contact.html

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <body>
     <header class="page-header">
       <img
-        src="img\10588211_software_developer_icon.png"
+        src="./img/10588211_software_developer_icon.png"
         class="page-header__item"
         alt=""
       />
@@ -62,14 +62,14 @@
         Shilpa Tali <br />
         careerfoundry<br />
         Germany<br />
-        <a href="tel:+49 30 4849 2016">Contact me at +49 30 4849 2016</a><br />
+        <a href="tel:+493048492016">Contact me at +49 30 4849 2016</a><br />
         <a href="skype:hello.careerfoundry"> hello.careerfoundry</a><br />
         <a href="mailto:office@careerfoundry.com">office@careerfoundry.com</a>
       </p>
     </div>
     <br />
     <main>
-      <form action="" method="post" class="contact-form">
+      <form action="./about.html" method="post" class="contact-form">
         <div class="msg">
           <label for="contact-Message">Message:* </label>
           <textarea
@@ -114,10 +114,11 @@
         <a href="https://x.com/i/flow/login">
           <img src="./img/294655_twitter_icon.svg" alt="Twitter"
         /></a>
-        <a href="https://www.linkedin.com/in/shilpa-sudhish-614b74156/">
-          <img
-            src="./img/5296501_linkedin_network_linkedin logo_icon.svg"
-            alt="LinkedIn"
+        <a
+          href="https://www.linkedin.com/in/shilpa-sudhish-614b74156/"
+          target="_blank"
+        >
+          <img src="./img/linkedin_logo_icon.svg" alt="LinkedIn"
         /></a>
       </div>
     </footer>
