--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header class="page-header">
       <img
-        src="img\10588211_software_developer_icon.png"
+        src="./img/10588211_software_developer_icon.png"
         class="page-header__item"
         alt=""
       />
@@ -61,7 +61,7 @@
     </header>
     <div class="profile">
       <img
-        src="img\131489_engineer_serviceman_service_labor_labs_icon.png"
+        src="./img/131489_engineer_serviceman_service_labor_labs_icon.png"
         class="profile__portrait"
         alt="profile"
       />
@@ -81,9 +81,7 @@
           <img src="./img/294655_twitter_icon.svg" alt="Twitter"
         /></a>
         <a href="https://www.linkedin.com/in/shilpa-sudhish-614b74156/">
-          <img
-            src="./img/5296501_linkedin_network_linkedin logo_icon.svg"
-            alt="LinkedIn"
+          <img src="./img/linkedin_logo_icon.svg" alt="LinkedIn"
         /></a>
       </div>
     </footer>
