Fixed the errors in work.html

--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
   <body>
     <header class="page-header">
       <img
-        src="img\10588211_software_developer_icon.png"
+        src="./img/10588211_software_developer_icon.png"
         class="page-header__item"
         alt=""
       />
@@ -128,9 +128,7 @@
           <img src="./img/294655_twitter_icon.svg" alt="Twitter"
         /></a>
         <a href="https://www.linkedin.com/in/shilpa-sudhish-614b74156/">
-          <img
-            src="./img/5296501_linkedin_network_linkedin logo_icon.svg"
-            alt="LinkedIn"
+          <img src="./img/linkedin_logo_icon.svg" alt="LinkedIn"
         /></a>
       </div>
     </footer>
